--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               </div>
               <div class="col-md-4">
                 <div class="ml-auto mr-auto" style="width: 500px;margin-top: 50px;padding-top:50px;">
-                  <img style="width: 500px;" src="assets/img/hea.jpg" alt="" class="rounded">
+                  <img style="width: 500px;" src="assets/img/hea.JPG" alt="" class="rounded">
                 </div>
               </div>
             </div>
@@ -355,7 +355,7 @@
             <div class="row collections" style="margin-top: 40px;margin-bottom: 40px;">
               <div class="col-md-4">
                 <div class="ml-auto mr-auto" style="width: 300px;margin-top: 40px;">
-                  <img style="width: 300px;padding :10px" src="assets/img/cirp.jpg" alt="" class="rounded">
+                  <img style="width: 300px;padding :10px" src="assets/img/cirp.JPG" alt="" class="rounded">
                 </div>
               </div>
               <div class="col-md-8">
