--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
       <div class="container">
         <div class="photo-container">
-          <img src="assets/img/LinkedIn click.JPG" alt="">
+          <img src="assets/img/Saumya-potrait.jpg" alt="">
         </div>
         <h3 class="title">Saumya</h3>
         <p class="category typewrite" data-period="1000"
