--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!-- About me -->
         <h3 class="title">About me</h3>
         <div class="myprofile-photo-container">
-          <img src="assets/img/LinkedIn click.JPG" alt="">
+          <img src="assets/img/Saumya-potrait.jpg" alt="">
         </div>
         <h5 class="description">I am pursuing master’s in computer science at California State University,
           Long Beach. I am actively looking for full time opportunities as Software Developer, Data Scientist, Data Analyts, Database Developer.
